# attiny85-arduino-cmake-rust

./: LICENSE  README.md
arduino/src/: blink.cpp
cmake/: CMakeLists.txt  avr-gcc-toolchain.cmake
cmake/src/: main.cpp
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: main.rs
